# read-collapser-test

./: README.md
tests/: CMakeLists.txt  majority-voting-consensus-generator-tests.cpp
tests/consensus/: cnn-consensus-strategy-tests.cpp  deep-learning-consensus-caller-tests.cpp
tests/msa_bam/: bam-to-msa-converter-tests.cpp
